force-app/main/default/objects/Legal_Advisor__c/Legal_Advisor__c.object-meta.xml
<CustomObject>
    <description>Firms that provide legal services to different clients.</description>
    <label>Legal Advisor</label>
    <nameField>
        <label>Nombre de Legal Advisor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Advisors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>