force-app/main/default/objects/Legal_Advisor__c/fields/Number_Of_Clients__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Clients__c</fullName>
    <description>The amount of clients a Legal Advisor has.</description>
    <label>Number Of Clients</label>
    <summaryForeignKey>Client__c.Legal_Advisor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>